--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-  </head>
+ 
+  <script src="https_//kit.fontawesome.com/666b06fae7.js"></script>
+  <link rel="stylesheet"  href="styles.css">
+
+</head>
 
 <body>
   <app-root></app-root>
